# simple-crud-budget

./: README.md  budget.db  database.py  main.py  models.py  pyproject.toml
templates/: add.html  base.html  category.html  index.html
